--- a/Frontend/Cantine/src/app/core-cantine/forgot-password/forgot-password.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/forgot-password/forgot-password.component.html
@@ -1,47 +1,49 @@
 <app-loading-dialog *ngIf="isLoadingPage"></app-loading-dialog>
 <div class="container-password">
 
-                       <div class="card text-center" >
-             <div class="card-body">
-                 <h1 class="card-title">Mot de passe oublié ?</h1>
-                  <form [formGroup]="forgotPasswordForm">
-                      <!---------------------- Email --------------------------->
-                      <div class="form-group">
-                          <label for="email"> Email : </label>
-                          <input [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" class="form-control"
-                                 formControlName="email"
-                                 placeholder="  Votre Email "
-                                 type="email"
-                                 id="email"
-                          />
-                          <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
-                              <div *ngIf="f['email'].errors['required']" class="center"> Votre Email est requis</div>
-                              <div *ngIf="f['email'].errors['maxlength']" class="center">
-                                  votre Nom ne doit pas dépasser 1000 charctéres
-                              </div>
-                              <div *ngIf="(f['email'].errors['email'] )  ||  (f['email'].errors['pattern'])" class="center">
-                                  Le Format de Email est incorrecte
-                              </div>
-                          </div>
-                      </div>
+    <div class="card text-center">
+        <div class="card-body">
+            <h1 class="card-title">Mot de passe oublié ?</h1>
+            <form [formGroup]="forgotPasswordForm">
+                <!---------------------- Email --------------------------->
+                <div class="form-group">
+                    <label for="email"> Email : </label>
+                    <input [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" class="form-control"
+                           formControlName="email"
+                           placeholder="  Votre Email "
+                           type="email"
+                           id="email"
+                    />
+                    <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                        <div *ngIf="f['email'].errors['required']" class="center"> Votre Email est requis</div>
+                        <div *ngIf="f['email'].errors['maxlength']" class="center">
+                            votre Nom ne doit pas dépasser 1000 charctéres
+                        </div>
+                        <div *ngIf="(f['email'].errors['email'] )  ||  (f['email'].errors['pattern'])" class="center">
+                            Le Format de Email est incorrecte
+                        </div>
+                    </div>
+                </div>
 
 
-                  </form>
-                 <p class="email-not-found-text" *ngIf="submitted && !emailExist">  Votre  Email N'existe  Pas  </p>
-                 <p class="card-text">Nous enverrons un code de vérification à cette adresse e-mail ou à ce numéro de téléphone si un compte Cantinière existant correspond</p>
-                  <button class="btn" (click)="OnSubmit()" *ngIf="!isLoadingPage"> soumettre </button>
-             </div>
-         </div>
+            </form>
+            <p class="email-not-found-text" *ngIf="submitted && !emailExist"> Votre Email N'existe Pas </p>
+            <p class="card-text">Nous enverrons un code de vérification à cette adresse e-mail ou à ce numéro de
+                téléphone si un compte Cantinière existant correspond</p>
+            <button class="btn" (click)="OnSubmit()" *ngIf="!isLoadingPage"> soumettre</button>
+        </div>
+    </div>
 
 </div>
 
 
 <style>
-    .card{
+    .card {
         width: 30%;
-         border-radius: 10px;
+        border-radius: 10px;
     }
-    .container-password{
+
+    .container-password {
         margin-top: 5%;
         margin-bottom: 5%;
         display: flex;
@@ -50,14 +52,17 @@
 
 
     }
-    div  {
+
+    div {
         margin-top: 1%;
     }
+
     p {
         margin-top: 5%;
     }
-   .email-not-found-text{
-       color: red;
-   }
+
+    .email-not-found-text {
+        color: red;
+    }
 
 </style>
