modify  design  of  core-cantine

--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -10,9 +10,8 @@
         </button>
     </div>
 
-    <div *ngIf="!disconnected">
+    <div class="logo-cantine" *ngIf="!disconnected">
         <a href="#"> <img alt="cantière-logo" src="../../assets/logo.png"> </a>
-
     </div>
 
     <div class="logo-container">
