update  forgot-password design

--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="text-center">
-            <img alt="logo" class="form-logo" src="../../../../assets/images/logo.png" width="80px">
-            <h4 class="mt-1 mb-5 pb-1"> Cantinière</h4>
+            <img    src="../../../../assets/images/logo.png" width="80px">
+            <h3 class="mt-1 mb-5 pb-1"> Cantinière</h3>
         </div>
         <div class="col-md-3"></div>
         <div class="col-md-6">
