--- a/Frontend/Cantine/src/app/core-cantine/forgot-password/forgot-password.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/forgot-password/forgot-password.component.html
@@ -1,10 +1,14 @@
-<app-loading-dialog *ngIf="isLoadingPage"></app-loading-dialog>
-<div class="container-password">
-
-    <div class="card text-center">
-        <div class="card-body">
-            <h1 class="card-title">Mot de passe oublié ?</h1>
+<div class="container">
+    <div class="row">
+        <div class="logo-cantine center">
+            <img src="../../../../assets/images/logo.png" width="80px">
+        </div>
+        <h1 class="center">Mot de passe oublié ?</h1>
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
             <form [formGroup]="forgotPasswordForm">
+
+
                 <!---------------------- Email --------------------------->
                 <div class="form-group">
                     <label for="email"> Email : </label>
@@ -25,44 +29,30 @@
                     </div>
                 </div>
 
-
             </form>
+
             <p class="email-not-found-text" *ngIf="submitted && !emailExist"> Votre Email N'existe Pas </p>
             <p class="card-text">Nous enverrons un code de vérification à cette adresse e-mail ou à ce numéro de
                 téléphone si un compte Cantinière existant correspond</p>
-            <button class="btn" (click)="OnSubmit()" *ngIf="!isLoadingPage"> soumettre</button>
+            <div class="center submit-btn">
+                <button class="btn" (click)="OnSubmit()" *ngIf="!isLoadingPage; else loadingTemplate">
+                     <span>
+                         <i class="fa fa-check"></i>
+                     </span>
+                    soumettre
+                </button>
+            </div>
         </div>
     </div>
-
 </div>
 
 
-<style>
-    .card {
-        width: 30%;
-        border-radius: 10px;
-    }
+<ng-template #loadingTemplate>
+    <!-- Afficher le spinner ici pendant le chargement -->
+    <div class="spinner-container">
+        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    </div>
 
-    .container-password {
-        margin-top: 5%;
-        margin-bottom: 5%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+</ng-template>
 
 
-    }
-
-    div {
-        margin-top: 1%;
-    }
-
-    p {
-        margin-top: 5%;
-    }
-
-    .email-not-found-text {
-        color: red;
-    }
-
-</style>
