--- a/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
@@ -1,39 +1,35 @@
-<div class = "image-header" >
-    <img src="assets/images/mainImage.jpg" width="100%" height="500vh">
-</div>
-
-<div class="center" style="width: 50%; transform: translateX(50%);  ">
+<div>
 
 
+    <h1 class="center"> Nos Menus </h1>
 
-    <h1 class="center"> Nos  Menus    </h1>
-
-    <div  class="container-fluid red" >
+    <div class="container-fluid red">
         <div class="row">
-            <div *ngFor="let menu of menus$ |async " class="col m4 s12" >
+            <div *ngFor="let menu of menus$ |async " class="col m4 s12">
                 <div class="card horizontal">
                     <div class="center">
-                        <img  [src]="menu.image" height="40%" width="40%"   />
+                        <img [src]="menu.image" height="40%" width="40%"/>
                     </div>
 
                     <div class="card-stacked">
                         <div class="card-content">
                             <p> Menu :   {{menu.label}}</p>
-                            <p> description  : {{menu.description}}</p>
-                            <p>  Prix :   {{menu.price}}</p>
+                            <p> description : {{menu.description}}</p>
+                            <p> Prix :   {{menu.price}}</p>
                         </div>
                     </div>
                     <div>
-                        <button class="btn" (click)="addToOrder(menu)"> Ajouter Le Menu </button>
+                        <button class="btn" (click)="addToOrder(menu)"> Ajouter Le Menu</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div  class="center btn"  (click)="goback()">
-        <mat-icon>arrow_back</mat-icon> retour
+    <div class="center btn" (click)="goback()">
+        <mat-icon>arrow_back</mat-icon>
+        retour
     </div>
 
 
-
+</div>
