update  core-cantine-modules

--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -102,7 +102,7 @@
 <ng-template #loadingTemplate>
     <!-- Afficher le spinner ici pendant le chargement -->
     <div class="spinner-container">
-        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+        <mat-progress-spinner mode="indeterminate" diameter="60"></mat-progress-spinner>
     </div>
 
 </ng-template>
