update  authentication  component

--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -67,7 +67,7 @@
                     </div>
 
                     <div class="center" *ngIf="wrong_credentials" (click)="forgotPassword()">
-                        <p style="color: #004a9f"> Mot de passe oublié ! </p>
+                        <p id="forgot-password"> Mot de passe oublié ! </p>
                     </div>
 
                     <div class="validate-form center">
