add reset password  component

--- a/Frontend/Cantine/src/app/core-cantine/reset-password/reset-password.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" style="margin-top: 2%;">
     <div class="row">
         <div class="logo-cantine center">
-            <img src="../../../../assets/images/logo.png" width="80px">
+            <img src="../../../../assets/images/logo.png" width="80px" alt="log  of cantine">
         </div>
         <h1 class="center">changer  votre  mot  de  passe </h1>
         <div class="col-md-3"></div>
@@ -65,7 +65,6 @@
         </div>
     </div>
 </div>
-
 
 <ng-template #loadingTemplate>
     <!-- Afficher le spinner ici pendant le chargement -->
