add  customUserCheker   for  spring  security to check  if  user  account  is Enable for  checking  if  is  valid by superAdmin

--- a/Backend/Cantine/src/main/resources/templates/confirmation-admin-registration.html
+++ b/Backend/Cantine/src/main/resources/templates/confirmation-admin-registration.html
@@ -129,7 +129,7 @@
                                                                     style="Margin:0;mso-line-height-rule:exactly;font-family:arial, 'helvetica neue', helvetica, sans-serif;line-height:24px;letter-spacing:0;color:#999999;font-size:14px">
                                                                 <span style="font-size:16px;line-height:24px">
 
-                                                                   Monsieur <span th:text="${adminFirstName}"></span>  <span th:text="${adminLastName}"></span>  avait crée un compte pour vous sur la plateforme de cantinier tant que administrateur.
+                                                                   Monsieur <span th:text="${adminFirstName}"></span>  <span th:text="${adminLastName}"></span>  avait crée un compte sur la plateforme de cantinier tant que administrateur.
                                                                     veuillez confirmer l'inscription en cliquant sur le bouton ci-dessous.
                                                                     <br>
                                                                    <span style="color: #ce4c4c"> si aucune validation n'est effectué dans les 48h, le compte sera supprimé. </span>
