make  confirmation-token by email

--- a/Frontend/Cantine/src/app/core-cantine/confirmation-token/confirmation-token.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/confirmation-token/confirmation-token.component.html
@@ -14,4 +14,5 @@
           
     </div>
       <h1 class="center">  {{serverResponse}}  </h1>
+    <h3 *ngIf="isAdministrator" class="center" style="color: #d71717">Votre adresse a été validée avec succès. Vous pourrez utiliser votre compte une fois que l'administration d'Aston aura confirmé votre inscription</h3>
 </div>
