--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -50,7 +50,7 @@
 
                 <div class="account-state center" *ngIf="!isLoading;  else loadingTemplate">
                     <div *ngIf="disabled_account" class="disabled-account">
-                        <p style=" color :  red "> Votre compte n'est pas Activer <br> <span
+                        <p style=" color :  red "> Votre compte n'est pas Activé <br> <span
                                 style="color: #004a9f  ;  cursor:pointer"
                                 (click)="sendTokenToActivateAccount()">Cliquer  ici  pour activer </span>
                         </p>
