update  admin  navBar

--- a/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
+++ b/Frontend/Cantine/src/app/admin/main-admin/main-admin.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
     <button (click)="sidenav.toggle()" *ngIf="isConnected" class="burgger" mat-icon-button>
         <div *ngIf="!sidenav.opened">
-            <img alt="cantière-logo"  src="{{admin.image}}">
+            <img alt="admin  image"  src="{{admin.image}}">
         </div>
         <div *ngIf="sidenav.opened">
-            <img alt="cantière-logo"   src="{{admin.image}}" >
+            <img alt="admin"   src="{{admin.image}}" >
         </div>
     </button>
     <div *ngIf="!isConnected">
